fix missing avatar on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ section li {
 	display: none;
 	height: 120px;
 	width: 120px;
-	background: 0px -10px url(../images/avatar.jpg);
+	background: 0px -10px url(../images/avatar.jpeg);
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
